--- a/app/src/scss/modules/m-services.scss
+++ b/app/src/scss/modules/m-services.scss
@@ -43,8 +43,8 @@
     }
   }
 
-  &__image {
-    border-radius: 50%;
+  &__holder {
+    display: block;
 
     margin-left: auto;
     margin-right: auto;
@@ -54,6 +54,19 @@
     @include breakpoint($bp__laptop) {
       max-width: 16em;
     }
+  }
+
+  &__ratio {
+    display: block;
+    position: relative;
+
+    padding-bottom: 100%;
+  }
+
+  &__image {
+    position: absolute;
+
+    border-radius: 50%;
   }
 
   &__name {
